# rkllm-studio

./: .gitignore  start_native.sh
backend/: Cargo.toml
backend/src/: main.rs
backend/src/openai/: mod.rs
backend/src/rkllm/: mod.rs
docker/: Dockerfile  docker-compose.yml
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
